[package]
name = "arkworks_backend"
version = "0.1.0"
authors = ["Kevaundray Wedderburn <kevtheappdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-serialize = { version = "0.3.0", default-features = false, features = [
    "derive",
] }
ark-std = { version = "0.3.0", default-features = false }
ark-ff = { version = "0.3.0", default-features = false }
ark-bn254 = { version = "0.3.0", default-features = false, features = [
    "curve",
] }
ark-bls12-381 = { version = "0.3.0", default-features = false, features = [
    "curve",
] }
acvm = { git = "https://github.com/noir-lang/noir", branch = "configure-marlin" }
ark-marlin = { version = "0.3.0", default-features = false }
ark-poly-commit = { version = "0.3.0", default-features = false }
ark-poly = { version = "0.3.0", default-features = false }
ark-relations = { version = "0.3.0", default-features = false }
blake2 = { version = "0.9", default-features = false }
cfg-if = "1.0.0"

num-bigint = "0.4"
num-traits = "0.2.8"

[features]
# XXX: We probably want to use the re-exported field in acir
# which means we need to add config flags for that dependency too
# default = ["bls12_381"] # not specifying a default sometimes gives an error that "extern location for acvm does not exist", however, it still builds within nargo 
bn254 = ["acvm/bn254"]
bls12_381 = ["acvm/bls12_381"]
