[package]
name = "arkworks_backend"
version = "0.1.0"
authors = ["Kevaundray Wedderburn <kevtheappdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"

acvm = "0.9.0"

ark-ff = { version = "0.4.0", default-features = false }
ark-bn254 = { version = "0.4.0", default-features = false, features = ["curve"], optional = true }
ark-bls12-381 = { version = "0.4.0", default-features = false, features = ["curve"], optional = true }
ark-relations = { version = "0.4.0", default-features = false }

[features]
# XXX: We probably want to use the re-exported field in acir
# which means we need to add config flags for that dependency too
# not specifying a default sometimes gives an error that "extern location for acvm does not exist" on some imports locally,
# but it still builds when specifying `marlin_arkworks_backend/[field name]` in the Cargo.toml inside the nargo crate, uncomment to remove extern location errors
default = ["bn254"]
bn254 = ["acvm/bn254", "dep:ark-bn254"]
bls12_381 = ["acvm/bls12_381", "dep:ark-bls12-381"]
