[package]
name = "arkworks_backend"
version = "0.1.0"
authors = ["The Noir Team <team@noir-lang.org>"]
edition = "2021"
rust-version = "1.66"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
acvm = { version = "0.9.0", default-features = false }

ark-ff = { version = "0.4.0", default-features = false }
ark-relations = { version = "0.4.0", default-features = false }

# curves
ark-bn254 = { version = "0.4.0", default-features = false, features = ["curve"], optional = true }
ark-bls12-381 = { version = "0.4.0", default-features = false, features = ["curve"], optional = true }

[features]
default = ["bn254"]
bn254 = ["acvm/bn254", "dep:ark-bn254"]
bls12_381 = ["acvm/bls12_381", "dep:ark-bls12-381"]
